<resources>
    <string name="app_name">Calendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="capital_calendar_title">Ημερολόγιο</string>
    <string name="synday_gr">ΚΥΡ</string>
    <string name="monday_gr">ΔΕΥ</string>
    <string name="tuesday_gr">ΤΡΙ</string>
    <string name="wednesday_gr">ΤΕΤ</string>
    <string name="thursday_gr">ΠΕΜ</string>
    <string name="friday_gr">ΠΑΡ</string>
    <string name="saturday_gr">ΣΑΒ</string>
    <string name="capital_b_o_s">CAPITAL B.O.S</string>
    <string name="calendar_event">Πρόγραμμα Συμβάντων</string>
    <string name="calendar_view">Προβολή Ημερολογίου</string>
    <string name="days_view">Μέρες</string>
    <string name="week_view">Εβδομάδα</string>
    <string name="month_view">Μήνας</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_edit_delete_event_popupmsg">Προσθήκη/Επεξεργασία/Διαγραφή συμβάντων</string>
    <string name="month_cell_example">ΔΕΚ</string>
    <string name="example_month_hour_cell">ΔΕΚ</string>
    <string name="example_hour_hour_cell">10:00</string>
    <string name="change_time">Change time</string>
    <string name="change_date">Change Date</string>
    <string name="event_title">Event title</string>
    <string name="comments">Comments</string>
    <string name="event_comment">Event comment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="event">Event:</string>
    <string name="event_info">Event Info</string>
    <string name="id">ID:</string>
    <string name="title">Title:</string>
    <string name="date_info">Date:</string>
    <string name="time_info">Time:</string>
    <string name="comment_info">Comment:</string>
    <string name="event_title_hint">Event title</string>
    <string name="event_comment_hint">Event comment</string>

    <string name="every_day_gr">Κάθε μέρα</string>
    <string name="every_week_gr">Κάθε βδομάδα</string>
    <string name="every_month_gr">Κάθε μήνα</string>
    <string name="every_year_gr">Κάθε χρόνο</string>
    <string name="custom_gr">Επεξεργασία</string>
    <string name="repeat_gr">Επανάληψη</string>
    <string name="more_events_dots">…</string>
    <string name="calendar_gr">Ημερολόγιο</string>
    <string name="event_title_gr">Τίτλος συμβάντος</string>
    <string name="event_comment_gr">Σχόλια συμβάντος</string>

    <string-array name="custom_repeat_spinner_less">
        <item>ημέρα</item>
        <item>εβδομάδα</item>
        <item>μήνα</item>
        <item>χρόνο</item>
    </string-array>

    <string-array name="custom_color_spinner">
        <item>Κόκκινο</item>
        <item>Κίτρινο</item>
        <item>Πράσινο</item>
        <item>Μπλε</item>
        <item>Μωβ</item>
        <item>Προκαθορισμένο</item>
    </string-array>

    <string-array name="custom_repeat_spinner_more">
        <item>ημέρες</item>
        <item>βδομάδες</item>
        <item>μήνες</item>
        <item>χρόνια</item>
    </string-array>

</resources>