<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Update_Activity">

    <ImageView
        android:id="@+id/menu_new_upd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="end"
        app:srcCompat="@drawable/bullets"
        app:tint="@color/blue"
        tools:ignore="ContentDescription" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/event"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/eventNameETupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/event_title"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/comments"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/eventCommentETupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/event_comment"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/eventDateETupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/eventTimeETupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/changeTimeTVupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/change_time"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:drawableRightCompat="@drawable/clock" />

    <TextView
        android:id="@+id/changeDateTVupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/change_date"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:drawableRightCompat="@drawable/date" />








    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="updEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>


</LinearLayout>