<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/regularView"
        android:background="@android:color/darker_gray" />
    <TextView
        android:id="@+id/everyDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/every_day_gr"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/everyDayView"
        android:background="@android:color/darker_gray" />
    <TextView
        android:id="@+id/everyWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/every_week_gr"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/everyWeekView"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/everyMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/every_month_gr"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/everyMonthView"
        android:background="@android:color/darker_gray" />



    <TextView
        android:id="@+id/everyYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/every_year_gr"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/everyYearView"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/customRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/custom_gr"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />



</LinearLayout>