<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--Layout ToolBar-->
        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"

                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/capital_calendar_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <!--        Layout monthshownextprev-->
        <LinearLayout


            android:id="@+id/dateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layoutToolBar">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="previousMonthAction"
                android:text="@string/back"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Nov 2021"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="nextMonthAction"
                android:text="@string/forward"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <!--Layout DaysOfWeek-->
        <LinearLayout
            android:id="@+id/daysOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/dateBtn">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/synday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday_gr"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </LinearLayout>



            <LinearLayout
                android:id="@+id/recLin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/floatAddBtnMonthView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daysOfWeek">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatAddBtnMonthView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="336dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue"
                android:src="@drawable/add"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recLin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_gravity="start"/>
    </androidx.drawerlayout.widget.DrawerLayout>