<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeekViewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >



        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"

                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/capital_calendar_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>



        </LinearLayout>



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout


                android:id="@+id/dateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="previousDayAction"
                    android:text="@string/back"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/monthDayText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Nov 2021"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="nextDayAction"
                    android:text="@string/forward"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/daysOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateBtn"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/dayOfWeekTv"
                    android:layout_width="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday_gr"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourRecListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatAddBtnDailyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center|end|bottom"
                android:layout_marginTop="185dp"
                android:layout_marginEnd="177dp"
                android:backgroundTint="@color/blue"
                android:src="@drawable/add"
                android:tint="@color/white" />

            <ListView
                android:id="@+id/hourListView"
                android:layout_below="@id/floatAddBtnDailyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />









        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>